force-app/main/default/objects/Follow_Up__c/fields/Folllow_Up1_Summary__c.field-meta.xml
<CustomField>
    <fullName>Folllow_Up1_Summary__c</fullName>
    <label>Last Followup Summary</label>
    <type>TextArea</type>
</CustomField>