force-app/main/default/objects/Follow_Up__c/fields/Follow_Up_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Remarks__c</fullName>
    <label>Follow-Up Primary Remarks</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RNR</fullName>
            </value>
            <value>
                <fullName>Needs more time to decide</fullName>
            </value>
            <value>
                <fullName>Customer Needs More Information</fullName>
            </value>
            <value>
                <fullName>Customer asked to follow up later</fullName>
            </value>
            <value>
                <fullName>Wants to compare with other brands</fullName>
            </value>
            <value>
                <fullName>Wants finance or insurance details</fullName>
            </value>
            <value>
                <fullName>Asking for additional discounts or offers</fullName>
            </value>
            <value>
                <fullName>Wants price list or brochure</fullName>
            </value>
            <value>
                <fullName>Asking about delivery timelines</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>