force-app/main/default/objects/Follow_Up__c/fields/FollowUpType__c.field-meta.xml
<CustomField>
    <fullName>FollowUpType__c</fullName>
    <label>FollowUpType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>booking call</fullName>
                <label>Booking Call</label>
            </value>
            <value>
                <fullName>Schedule TR Call</fullName>
            </value>
            <value>
                <fullName>Reschedule TR Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>