force-app/main/default/objects/Follow_Up__c/fields/Interaction_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Date_Time__c</fullName>
    <label>Interaction Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>