force-app/main/default/objects/Follow_Up__c/fields/Lead_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Id__c</fullName>
    <formula>Lead__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Id</label>
    <type>Text</type>
</CustomField>