force-app/main/default/objects/Follow_Up__c/fields/Previous_Followup_date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Followup_date__c</fullName>
    <label>Previous_Followup_date</label>
    <type>DateTime</type>
</CustomField>