force-app/main/default/objects/Follow_Up__c/validationRules/Restrict_Owner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Owner_Change</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp; 
NOT($Profile.Name = &quot;System Administrator&quot;)</errorConditionFormula>
    <errorMessage>You cannot change the owner of this record. The owner is updated automatically when the Lead Owner changes.</errorMessage>
</ValidationRule>